airflow-flower-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: airflow
    tier: flower
  name: flower
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
      tier: flower
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: airflow
        tier: flower
    spec:
      volumes:
      - name: dags-volume
        configMap:
          name: airflow-dags
      containers:
      - args:
        - flower
        volumeMounts:
          - name: dags-volume
            mountPath: /usr/local/airflow/dags
        image: gcr.io/zenreach-177100/kube-airflow:1.8.0.0-1.6.1-0.10
        imagePullPolicy: Always
        name: flower
        ports:
        - containerPort: 5555
          name: flower
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-10-02T21:22:44Z
    lastUpdateTime: 2017-10-02T21:22:44Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
