airflow-scheduler-worker.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: airflow
        tier: scheduler
    spec:
      restartPolicy: Always
      containers:
      - name: scheduler
        image: mumoshu/kube-airflow:1.8.0.0-1.6.1
        # volumes:
        #     - /localpath/to/dags:/usr/local/airflow/dags
        args: ["scheduler", "-n", "5"]
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: airflow
        tier: worker
    spec:
      restartPolicy: Always
      containers:
      - name: worker
        image: mumoshu/kube-airflow:1.8.0.0-1.6.1
        # volumes:
        #     - /localpath/to/dags:/usr/local/airflow/dags
        args: ["worker"]
