airflow-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-web
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: airflow.foundation.gke.cntr.io
      http:
        paths:
          - path: /
            backend:
              serviceName: airflow-web
              servicePort: web
